manifests/martinschurig-com/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: martinschurig-com
  namespace: default
  labels:
    app: martinschurig-com
    stage: prod
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  template:
    metadata:
      name: martinschurig-com
      labels:
        app: martinschurig-com
        stage: prod
    spec:
      containers:
      - name: martinschurig-com
        image: schurig/martinschurig.com
        ports:
        - name: nginx
          containerPort: 80
      imagePullSecrets:
      - name: docker-hub-registry-key
      # http://kubernetes.io/docs/user-guide/images/
