manifests/martinschurig-com/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: martinschurig-com
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: martinschurig-com
    stage: prod
